--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head>
+<head> 
+  <meta charset="UTF-8">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>?????? ????? ??</title>
@@ -175,4 +176,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
